2005-03-15  Mark McLoughlin  <markmc@redhat.com>

	* lib/storage.py: fix minor problems with Will's patch.

2005-03-14  William Lachance <wrlach@gmail.com>

	* configure.ac: Not finding xnest should be a warning, not an error. 
	Check for distro, and set path to Xsession accordingly (bug #168123).

	* lib/config.py.in: Don't hard code Xsession, make it a build-time
	option.

	* lib/Makefile.am: Substitute the Xsession variable appropriately.

	* lib/storage.py: Actually give the filename that's not found upon
	a ProfileStorageException.

2005-03-14  John Dennis  <jdennis@redhat.com>

	* rework mozillasource so code and class structure better supports
	file creation, file apply, etc. The profiles.ini file is now added
	and applied to the storage, as well as a sabayon prefs.js
	file. Other files under the profile directory are analyzed if they
	should be added to the storage for each profile. At the moment
	only prefs.js and bookmarks.html are stored under the
	profile. Next is to correctly merge these during the apply phase.

2005-03-14  Mark McLoughlin  <mark@skynet.ie>

	* admin-tool/userswindow.py: add cheesy UI which uses
	userdb.py

2005-03-14  Mark McLoughlin  <markmc@redhat.com>

	* lib/userdb.py: add stub for DV to hack on.

Sun Mar 13 08:11:04 CET 2005 Daniel Veillard <veillard@redhat.com>

	* po/POTFILES.in: added admin-tool/fileviewer.py

2005-03-11  Mark McLoughlin  <markmc@redhat.com>

	* admin-tool/sabayon.png: new icon from Diana.

2005-03-11  Mark McLoughlin  <markmc@redhat.com>

	* lib/userprofile.py:
	(SourceDelegate.sync_changes),
	(SourceDelegate.apply): add stubs for these delegate
	methods.
	(UserProfile.apply): invoke sync_changes() on each
	of the delegates after invoking it on the source.
	
	* lib/sources/mozillasource.py:
	(MozillaDelegate.sync_changes),
	(MozillaDelegate.commit_change),
	(MozillaDelegate.apply): add empty stubs.
	
	* lib/sources/paneldelegate.py:
	(PanelDelegate.sync_changes): add empty stub.
